--- a/RENOME-style.css
+++ b/RENOME-style.css
@@ -996,7 +996,7 @@ footer {
 
 /*modal*/
 .modal{
-    background: rgba(0, 0, 0, 0.46);
+    background: rgba(0, 0, 0, 0.79);
     position: fixed;
     width: 100%;
     height: 100%;
@@ -1064,6 +1064,27 @@ footer {
 }
 .modal-desc{
     width: 50%;
+    flex-grow: 1;
+    margin: 0 30px;
 
 }
+.modal-text{
+    padding: 15px;
+    color: #404040;
+    font-family: 'Montserrat-Regular', sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+}
+.modal-title{
+    color: rgba(139, 0, 0, 0.9);
+    font-family: 'Montserrat-bold', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+.modal-price{
+    font-size: 25px;
+    color: firebrick;
+
+}
+
 /*modal end*/
