--- a/phone.css
+++ b/phone.css
@@ -349,8 +349,7 @@ nav ul {
     margin: 15px;
 }
 .modal-image{
-    width: 200px;
-    height: 200px;
+    margin: 50px auto 0;
 }
 
 /*modal end*/
