--- a/RENOME-style.css
+++ b/RENOME-style.css
@@ -595,7 +595,7 @@ svg:hover {
     text-align: center;
 }
 
-.reservation-calendar select {
+.reservation-calendar input {
     width: 150px;
     border: none;
     font-size: 15px;
@@ -603,12 +603,11 @@ svg:hover {
     font-family: 'Montserrat-bold', sans-serif;
     color: #1e2633;
     border-bottom: 2px solid #f5f7fa;
-    background: url("pictures/arrow down.png") no-repeat right;
     margin-left: 10px;
     padding: 15px 0;
 }
 
-.reservation-time select {
+.reservation-time input {
     width: 150px;
     border: none;
     font-size: 15px;
@@ -616,7 +615,6 @@ svg:hover {
     font-family: 'Montserrat-bold', sans-serif;
     color: #1e2633;
     border-bottom: 2px solid #f5f7fa;
-    background: url("pictures/arrow down.png") no-repeat right;
     margin-left: 10px;
 }
 
@@ -1091,3 +1089,9 @@ footer {
 }
 
 /*modal end*/
+.ui-widget-header {
+    border: 1px solid #dddddd;
+    background: #00bcd478;
+    color: #333333;
+    font-weight: bold;
+}
