--- a/tablet-CSS.css
+++ b/tablet-CSS.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'Streetwear';
     src: url('fonts/Streetwear.eot');
@@ -10,17 +9,20 @@
     font-weight: normal;
     font-style: normal;
 }
+
 /*Header*/
 
 nav ul {
-    background: palevioletred;
-    font-family:'Streetwear', sans-serif ;
+
+    font-family: 'Streetwear', sans-serif;
 }
+
 /*Header End*/
 /*Section Top*/
 .top {
     min-height: 50vh;
 }
+
 /*Section Top End*/
 
 /*Section About*/
@@ -28,13 +30,16 @@ nav ul {
     line-height: 20px;
     font-size: 15px;
 }
+
 .about-renome-info {
     width: 50%;
     margin-left: 30px;
 }
+
 .about-renome-content {
     min-height: 40vh;
 }
+
 /*Section About End*/
 
 /*Section Gallery*/
@@ -42,39 +47,46 @@ nav ul {
     flex-wrap: wrap;
     min-height: 50vh;
 }
+
 .gallery-photos {
     width: 100%;
 }
+
 /*Section Gallery End*/
 
 /*Section Menu*/
 .menu-content {
     min-height: 30vh;
 }
+
 .menu-sections-content {
     width: 60%;
 }
+
 .menu-dishes-content {
     width: 90%;
 }
+
 .menu-dishes-items {
     padding: 0;
 }
 
-
 .title {
     width: 100%;
+    box-sizing: border-box;
 }
+
 /*Section Menu End*/
 
-
 /*Section Perfect Place*/
-.perfect-place-content{
+.perfect-place-content {
     min-height: 50vh;
 }
-.perfect-place-title{
-     width: 50%;
+
+.perfect-place-title {
+    width: 50%;
 }
+
 .perfect-place-picture {
     margin-left: 40px;
     transform: none;
@@ -87,20 +99,25 @@ nav ul {
     width: 50%;
     margin-left: 20px;
 }
+
 .reservations-desc {
     line-height: 25px;
     font-size: 15px;
 }
+
 .reservations-content {
     min-height: 30vh;
 }
+
 .make-reservation-content {
     flex-wrap: wrap;
 }
+
 .make-reservation-content > div {
     width: 100%;
     margin: 20px 0;
 }
+
 .make-reservation-content select {
     width: 90%;
     vertical-align: bottom;
@@ -114,12 +131,13 @@ nav ul {
     flex-wrap: wrap;
 }
 
-.lunch-image-container{
+/*.lunch-image-container{
     height: 90%;
-}
+}*/
 .lunch {
     padding: 10px 0;
 }
+
 .lunch-title {
     padding: 20px;
 }
@@ -130,9 +148,11 @@ nav ul {
 .contact {
     padding: 0;
 }
+
 .contact-content {
     min-height: 30vh;
 }
+
 .contact-details-content {
     min-height: 30vh;
     flex-wrap: wrap;
@@ -144,9 +164,11 @@ nav ul {
 .message {
     width: 100%;
 }
+
 .contact-details-tools {
     width: 100%;
 }
+
 .contact-details-tools {
     display: flex;
     align-items: center;
@@ -154,6 +176,7 @@ nav ul {
     flex-wrap: wrap;
     padding: 20px 0;
 }
+
 .contact-tools-title {
     width: 100%;
     text-align: center;
@@ -164,3 +187,8 @@ nav ul {
 /*modal*/
 
 /*modal end*/
+.menu-list {
+    min-width: 240px;
+    max-width: 600px;
+
+}
